plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.interviewee'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
	implementation 'org.springframework.session:spring-session-jdbc'
	implementation "com.openai:openai-java:2.10.0"
	implementation "com.openai:openai-java-client-okhttp:2.10.0"
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.session:spring-session-data-redis'
	implementation 'org.apache.tika:tika-parsers-standard-package:3.2.0'
	implementation 'org.apache.tika:tika-core:3.2.0'
	implementation 'com.google.cloud:google-cloud-speech:4.63.0'
	implementation 'com.google.cloud:google-cloud-texttospeech:2.69.0'
	implementation "com.google.protobuf:protobuf-java:3.25.8"
	implementation 'software.amazon.awssdk:secretsmanager:2.20.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

def openaiKey = System.getenv('OPENAI_API_KEY')
if (openaiKey) {
    tasks.withType(JavaExec).configureEach {
        systemProperty 'OPENAI_API_KEY', openaiKey
    }
}
